# airline-data-system

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  bootstrap.sh  docker-compose.yml  hive-site.xml  pyproject.toml
commons/: spark_utils.py
docs/: aviationstackapi_flights_doc.md
raw_data/csvs/: issues.csv
sql_scripts/: hive_create_tables.sql
src/config/: setup_logger.py
src/data_ingestion/: get_raw_data.py
src/storage_commons/: mongodb_utils.py
tests/: test_get_raw_data.py  test_mongodb_utils.py
tests/fixtures/: airports_sample.json
